Fix Menu Z-Index

--- a/css/_header.scss
+++ b/css/_header.scss
@@ -113,6 +113,7 @@
       position: fixed;
       top: 0;
       left: 0;
+      z-index: 3;
 
       place-content: center;
 
